'bit o code cleanup.